updated to use email-only registration
